updated pwed reference to images

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -27,33 +27,33 @@
           <p id="smiles">SMILES</p>
           <p id="grin">GRIN</p>
           <p id="laugh">LAUGH</p>
-          <button class="register-button"><img src="./images/button.png"></button>
+          <button class="register-button"><img src="../css_advanced/images/button.png"></button>
         </div>
 
         <div>
-          <h2 id="learn-pros"><img src="./images/pros.png"></h2>
+          <h2 id="learn-pros"><img src="../css_advanced/images/pros.png"></h2>
           <!-- block containing four blocks -->
           <div class="pros-container">
             <div id="pro-1">
-              <img src="./images/pro-1.png">
+              <img src="../css_advanced/images/pro-1.png">
               <h3 class="pro-name">Phillip Massey</h3>
               <p class="subtitle">« Smile of the year » <br> 2018 - 2019</p>
             </div>
 
             <div id="pro-2">
-              <img src="./images/pro-2.png">
+              <img src="../css_advanced/images/pro-2.png">
               <h3 class="pro-name">Nannie Lawrence</h3>
               <p clss="subtitle">Best « little smile » <br> 2017</p>
             </div>
 
             <div id="pro-3">
-              <img src="./images/pro-3.png">
+              <img src="../css_advanced/images/pro-3.png">
               <h3 class="pro-name">Bruce Walters</h3>
               <p class="subtitle">Best « Friend Smile » <br> live performance 2019</p>
             </div>
 
             <div id="pro-4">
-              <img src="./images/pro-4.png">
+              <img src="../css_advanced/images/pro-4.png">
               <h3 class="pro-name">Henry Hughes</h3>
               <p class="subtitle">« 24h smiles » winner <br> 2016 - 2019</p>
             </div>
@@ -62,7 +62,7 @@
       <!-- quote task three-->
       <section>
         <div id="testimonials">
-          <img src="./images/testimonial-avi.png">
+          <img src="../css_advanced/images/testimonial-avi.png">
           <div>
             <blockquote class="quote">« Those tutorials are concise and go straight to the point. I can’t think of a better <br>
                                       place to learn smiling. And it’s so fun!</blockquote>
@@ -75,17 +75,17 @@
       <section>
         <!-- header/title -->
         <div class="tutorial-box">
-          <h1 id="tutorial-header"><img src="./images/tutorials.png"></h1>
+          <h1 id="tutorial-header"><img src="../css_advanced/images/tutorials.png"></h1>
           <!-- container which holds 4 video items -->
           <div>
             <!-- video item -->
             <div id="tutorial-1">
-              <img src="./images/preview-1.png">
+              <img src="../css_advanced/images/preview-1.png">
               <h2 class="tut-title">Diagonal Smile</h2>
               <p class="sample-text">Lorem ipsum dolor sit amet, consect<br> adipiscing elit, sed do eiusmod.</p>
               <!-- author block -->
               <div id="">
-                <img class="video-avatar" src="./images/pro-1.png">
+                <img class="video-avatar" src="../css_advanced/images/pro-1.png">
                 <h3 class="video-author">Phillip Massey</h3>
               </div>
               <!-- star rating -->
@@ -104,12 +104,12 @@
 
             <!-- video item -->
             <div id="tutorial-2">
-              <img src="./images/preview-2.png">
+              <img src="../css_advanced/images/preview-2.png">
               <h2 class="tut-title">Sad Smile</h2>
               <p class="sample-text">Lorem ipsum dolor sit amet, consect<br> adipiscing elit, sed do eiusmod.</p>
               <!-- author block -->
               <div>
-                <img class="video-avatar" src="./images/pro-1.png">
+                <img class="video-avatar" src="../css_advanced/images/pro-1.png">
                 <h3 class="video-author">Phillip Massey</h3>
               </div>
               <!-- star rating -->
@@ -128,12 +128,12 @@
 
             <!-- video item -->
             <div id="tutorial-3">
-              <img src="./images/preview-3.png">
+              <img src="../css_advanced/images/preview-3.png">
               <h2 class="tut-title">Natural Smile</h2>
               <p class="sample-text">Lorem ipsum dolor sit amet, consect<br> adipiscing elit, sed do eiusmod.</p>
               <!-- author block -->
               <div>
-                <img class="video-avatar" src="./images/pro-1.png">
+                <img class="video-avatar" src="../css_advanced/images/pro-1.png">
                 <h3 class="video-author">Phillip Massey</h3>
               </div>
               <!-- star rating -->
@@ -152,12 +152,12 @@
 
             <!-- video item -->
             <div id=tutorial-4"">
-              <img src="./images/preview-4.png">
+              <img src="../css_advanced/images/preview-4.png">
               <h2 class=tut-title>Happy Smile</h2>
               <p class="sample-text">Lorem ipsum dolor sit amet, consect<br> adipiscing elit, sed do eiusmod.</p>
               <!-- author block -->
               <div>
-                <img class="video-avatar" src="./images/pro-1.png">
+                <img class="video-avatar" src="../css_advanced/images/pro-1.png">
                 <h3 class="video-author">Phillip Massey</h3>
               </div>
               <!-- star rating -->
@@ -206,7 +206,7 @@
           </div>
         </div>
         <!-- button -->
-        <button class="register-button"><img src="./images/button.png"></button>
+        <button class="register-button"><img src="../css_advanced/images/button.png"></button>
       </section>
       <!-- faq section-->
       <section class="faq">
