--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
       <div class="logo"></div>
       <div class="menu">
-        <a href=""><div class="courses">COURSES</div></a>
-        <a href=""><div class="pricing">PRICING</div></a>
-        <a href=""><div class="login">LOGIN</div></a>
+        <a href=""><div class="navbar">COURSES</div></a>
+        <a href=""><div class="navbar">PRICING</div></a>
+        <a href=""><div class="navbar">LOGIN</div></a>
       </div>
     </header>
 
@@ -62,7 +62,7 @@
       <!-- quote task three-->
       <section>
         <div id="testimonials">
-          <img src="./images/testimonial-avi.png">
+          <img class="quoteguy" src="./images/testimonial-avi.png">
           <div>
             <blockquote class="quote">« Those tutorials are concise and go straight to the point. I can’t think of a better <br>
                                       place to learn smiling. And it’s so fun!</blockquote>
@@ -91,11 +91,11 @@
               <!-- star rating -->
               <div>
                 <div>
-                  <img src="">
-                  <img src="">
-                  <img src="">
-                  <img src="">
-                  <img src="">
+                  <img src=">./images/rating.png">
+                  <img src=">./images/rating.png">
+                  <img src=">./images/rating.png">
+                  <img src=">./images/rating.png">
+                  <img src=">./images/rating.png">
                 </div>
                 <p class="rating"></p>
                 <p class="time">8 min</p>
